# corpai-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/corpai/: __init__.py  cli.py  graph.py  models.py  parser.py  scaffold.py  simulator.py  validator.py
tests/: test_parser.py  test_validator.py
