[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corpai"
version = "0.4.1"
description = "CLI validator and tooling for the CorpAI open standard"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ari", email = "ari532477@gmail.com" }]
keywords = ["ai", "agents", "corpai", "cli", "validator", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
corpai = "corpai.cli:app"

[project.urls]
Homepage = "https://github.com/Arigitshub/CorpAI"
Repository = "https://github.com/Arigitshub/corpai-cli"
"Bug Tracker" = "https://github.com/Arigitshub/corpai-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/corpai"]
